# vscode-versionlens

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  biome.jsonc  justfile  package-lock.json  package.json  tasks.yml  tsconfig.json
.github/workflows/: ci.yml  jetbrains.yml  release.yml  vscode.yml  zed.yml
assets/versionlens/: logo-redux.psd
crates/versionlens-cache/src/: key.rs  lib.rs  support.rs
crates/versionlens-core/src/: lib.rs  session.rs  support.rs
crates/versionlens-edits/src/: lib.rs  support.rs
crates/versionlens-http/src/: config.rs  lib.rs  retry.rs  support.rs
crates/versionlens-lsp/: Cargo.toml  README.md
crates/versionlens-lsp/src/: lib.rs  server.rs
crates/versionlens-lsp/src/server/: tests.rs
crates/versionlens-napi/src/: lib.rs  support.rs
crates/versionlens-parsers/src/: ansible_galaxy.rs  bazel_module.rs  bunfig.rs  cargo_config.rs  cargo_toml.rs  classify.rs  clojure_deps.rs  cocoapods_podfile.rs  composer_repositories.rs  conan.rs  cpanfile.rs  cpp.rs  document.rs  dotnet_xml.rs  dub_sdl.rs  dune_project.rs  gemfile.rs  gleam_toml.rs  go_mod.rs  go_proxy.rs  gradle_build.rs  gradle_version_catalog.rs  hackage.rs  haxelib.rs  helm_chart.rs  json_manifest.rs  julia.rs  kustomization_yaml.rs  leiningen_project.rs  lib.rs  luarocks.rs  maven_xml.rs  mix_exs.rs  nimble.rs  nix_flake.rs  npmrc.rs  opam.rs  paket.rs  pnpm_yaml.rs  pubspec_yaml.rs  (+17 more)
crates/versionlens-providers/src/: lib.rs  registry.rs  response.rs  support.rs  vulnerability.rs
crates/versionlens-suggestions/src/: choices.rs  lib.rs  support.rs
crates/versionlens-versions/src/: lib.rs  support.rs
docs/: authorization.md  commands-and-settings.md  custom-install-task.md  development.md  suggestion-overview.md
images/icons/: index.html
scripts/: build-editor-packages.mjs  check-assets.mjs  check-code-quality.mjs  check-code-quality.py  check-code-quality.test.mjs  check-data-object-fields.mjs  check-data-object-fields.py  check-editor-packages.mjs  check-entrypoints.mjs  check-napi-boundary.mjs  check-napi-boundary.py  check-package-parity.mjs  check-rust-production-constraints.mjs  check-rust-test-layout.mjs  check-source-lines.mjs  check-test-layout.mjs  check-toolchain.mjs  check-typescript-style.mjs  check-vscode-adapter.mjs  check-vscode-adapter.py  check-vsix-freshness.mjs  check-workspace-layout.mjs  package-zed.mjs
src/domain/: definitions.ts  domainContainer.ts  index.ts  serviceFactory.ts
src/domain/authorization/: definitions.ts
src/domain/caching/: definitions.ts  index.ts  memoryCache.ts  memoryExpiryCache.ts
src/domain/clients/: clientFactory.ts  definitions.ts  errors.ts  httpOptions.ts  index.ts  jsonHttpClient.ts  osvClient.ts
src/domain/configuration/: config.ts  definitions.ts  options.ts  optionsWithFallback.ts
src/domain/di/: definitions.ts
src/domain/http/: definitions.ts  index.ts
src/domain/logging/: consoleLoggerSink.ts  definitions.ts  index.ts  logger.ts  loggingOptions.ts
src/domain/parsers/: definitions.ts  index.ts  packageDescriptor.ts  packageDescriptorTypeUtils.ts  parserUtils.ts
src/domain/providers/: definitions.ts  importSuggestionProviders.ts  index.ts
src/domain/services/: definitions.ts  domainContainer.ts  iDomainServices.ts  iProviderServices.ts  index.ts  serviceFactory.ts
src/domain/useCases/: definitions.ts  fetchPackage.ts  fetchPackageSuggestions.ts  fetchPackages.ts  fetchProjectSuggestions.ts  getDependencyChanges.ts  getSuggestionProvider.ts  getSuggestions.ts  getSuggestionsStats.ts  getVulnerabilities.ts  importSuggestionProvider.ts  importSuggestionProviders.ts  index.ts  sortDependencies.ts
src/domain/utils/: asyncEmitter.ts  dispose.ts  file.ts  generics.ts  index.ts  url.ts
src/extension/: activate.ts  definitions.ts  extensionContainer.ts  index.ts  serviceFactory.ts  versionLensExtension.ts  vscodeAdapters.ts
src/extension/authorization/: authenticationInteractions.ts  authenticationProviderFactory.ts  authenticationProviders.ts  authorization.ts  authorizer.ts  customAuthenticationProvider.ts  definitions.ts  serviceFactory.ts  utils.ts
src/extension/events/: index.ts  serviceFactory.ts
src/extension/logging/: index.ts  outputChannelTransport.ts  serviceFactory.ts
src/extension/state/: contextState.ts  index.ts  versionLensState.ts
src/extension/suggestions/: index.ts  suggestionCodeLens.ts  suggestionCodeLensFactory.ts  suggestionCodeLensProvider.ts  suggestionCommandFactory.ts  suggestionInteractions.ts  suggestionsOptions.ts  vulnerabilityProvider.ts
src/extension/vscode/: definitions.ts  editorConfig.ts  index.ts  vsCodeConstructFactory.ts
src/extension/vulnerabilities/: index.ts  vulnerabilityInteractions.ts  vulnerabilityProvider.ts
src/extension/watcher/: index.ts  packageFileWatcher.ts  serviceFactory.ts
src/infrastructure/: definitions.ts  infrastructureContainer.ts
src/infrastructure/di/: awilixServiceCollection.ts  awilixServiceCollectionFactory.ts  index.ts
src/infrastructure/http/: requestLightClient.ts  requestLightFactory.ts
src/infrastructure/logging/: index.ts  loggerFactory.ts
src/infrastructure/parsers/: index.ts
src/infrastructure/process/: promiseSpawnClient.ts  promiseSpawnFactory.ts
src/infrastructure/services/: definitions.ts  index.ts  infrastructureContainer.ts  infrastructureServices.ts  serviceFactory.ts
src/infrastructure/vscode/: definitions.ts  index.ts  packageFileWatcher.ts  workspaceAdapter.ts
src/infrastructure/watcher/: packageFileWatcher.ts
src/presentation.extension/: activate.ts  definitions.ts  extensionContainer.ts  index.ts  serviceFactory.ts  versionLensExtension.ts
src/presentation.extension/authorization/: authenticationInteractions.ts  authenticationProviderFactory.ts  authorization.ts  index.ts  (+6 more)
test/: run.vscode.tests.js  runner.ts  vscode.runner.js
test/smoke/cargo/: Cargo.toml
test/smoke/pypi/: Pipfile  pyproject.toml  requirements.txt
test/unit/: index.tests.ts  utils.ts
tests/fixtures/: manifest-support-matrix.json
(+1239 files in other folders)
