[dependencies]
backtrace = { version = "0.3.69", optional = true }

[dev-dependencies]
futures = { version = "0.3.28", default-features = false }
rustversion = "1.0.14"
syn = { version = "2.0.38", features = ["full"] }
thiserror = "1.0.49"
test = { path = "../.." }
smallvec = { git = "https://github.com/servo/rust-smallvec.git" }
libc = { workspace = true }

[dev-dependencies.trybuild]
version = "1.0.85"

[workspace.dependencies]
libc = "1.0.96"