[project]
name = "test"
dependencies = [
  "httpx==0.28.1",
  "gidgethub[httpx]>4.0.0",
  "django>2.1; os_name != 'nt'",
  "django>5.2.8; os_name == 'nt'",
  "uvicorn[standard] >=0.12.0",
  "magic"
]

[project.optional-dependencies]
test = [
  "pytest==7.0.0",
  "pytest-cov[all]",
  "pytest-cov[all]<=6.0.0"
]

[tool.poetry.dependencies]
mysqlclient = "2.2.7"

[tool.poetry.group.dev.dependencies]
pip = { version = "25.3.0", source = "private" }
my-package = { path = ".." }